crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI063_PYI063.py.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI063.py:6:9: PYI063 (pep484-style-positional-only-parameter) Use PEP 570 syntax for positional-only parameters
  |
4 | from typing import Self
5 |
6 | def bad(__x: int) -> None: ...  # PYI063
  |         ^^^ PYI063 (pep484-style-positional-only-parameter)
7 | def also_bad(__x: int, __y: str) -> None: ...  # PYI063
8 | def still_bad(__x_: int) -> None: ...  # PYI063
  |
  = help: Add `/` to function signature

PYI063.py:7:14: PYI063 (pep484-style-positional-only-parameter) Use PEP 570 syntax for positional-only parameters
  |
6 | def bad(__x: int) -> None: ...  # PYI063
7 | def also_bad(__x: int, __y: str) -> None: ...  # PYI063
  |              ^^^ PYI063 (pep484-style-positional-only-parameter)
8 | def still_bad(__x_: int) -> None: ...  # PYI063
  |
  = help: Add `/` to function signature

PYI063.py:8:15: PYI063 (pep484-style-positional-only-parameter) Use PEP 570 syntax for positional-only parameters
   |
 6 | def bad(__x: int) -> None: ...  # PYI063
 7 | def also_bad(__x: int, __y: str) -> None: ...  # PYI063
 8 | def still_bad(__x_: int) -> None: ...  # PYI063
   |               ^^^^ PYI063 (pep484-style-positional-only-parameter)
 9 |
10 | def no_args() -> None: ...
   |
   = help: Add `/` to function signature

PYI063.py:24:14: PYI063 (pep484-style-positional-only-parameter) Use PEP 570 syntax for positional-only parameters
   |
22 |     def bad(__self) -> None: ...  # PYI063
23 |     @staticmethod
24 |     def bad2(__self) -> None: ...  # PYI063
   |              ^^^^^^ PYI063 (pep484-style-positional-only-parameter)
25 |     def bad3(__self, __x: int) -> None: ...  # PYI063
26 |     def still_bad(self, __x_: int) -> None: ...  # PYI063
   |
   = help: Add `/` to function signature

PYI063.py:25:22: PYI063 (pep484-style-positional-only-parameter) Use PEP 570 syntax for positional-only parameters
   |
23 |     @staticmethod
24 |     def bad2(__self) -> None: ...  # PYI063
25 |     def bad3(__self, __x: int) -> None: ...  # PYI063
   |                      ^^^ PYI063 (pep484-style-positional-only-parameter)
26 |     def still_bad(self, __x_: int) -> None: ...  # PYI063
27 |     @staticmethod
   |
   = help: Add `/` to function signature

PYI063.py:26:25: PYI063 (pep484-style-positional-only-parameter) Use PEP 570 syntax for positional-only parameters
   |
24 |     def bad2(__self) -> None: ...  # PYI063
25 |     def bad3(__self, __x: int) -> None: ...  # PYI063
26 |     def still_bad(self, __x_: int) -> None: ...  # PYI063
   |                         ^^^^ PYI063 (pep484-style-positional-only-parameter)
27 |     @staticmethod
28 |     def this_is_bad_too(__x: int) -> None: ...  # PYI063
   |
   = help: Add `/` to function signature

PYI063.py:28:25: PYI063 (pep484-style-positional-only-parameter) Use PEP 570 syntax for positional-only parameters
   |
26 |     def still_bad(self, __x_: int) -> None: ...  # PYI063
27 |     @staticmethod
28 |     def this_is_bad_too(__x: int) -> None: ...  # PYI063
   |                         ^^^ PYI063 (pep484-style-positional-only-parameter)
29 |     @classmethod
30 |     def not_good(cls, __foo: int) -> None: ...  # PYI063
   |
   = help: Add `/` to function signature

PYI063.py:30:23: PYI063 (pep484-style-positional-only-parameter) Use PEP 570 syntax for positional-only parameters
   |
28 |     def this_is_bad_too(__x: int) -> None: ...  # PYI063
29 |     @classmethod
30 |     def not_good(cls, __foo: int) -> None: ...  # PYI063
   |                       ^^^^^ PYI063 (pep484-style-positional-only-parameter)
31 |
32 |     # The first non-self argument isn't positional-only, so logically the second can't be either:
   |
   = help: Add `/` to function signature

PYI063.py:52:23: PYI063 (pep484-style-positional-only-parameter) Use PEP 570 syntax for positional-only parameters
   |
50 | class Metaclass(type):
51 |     @classmethod
52 |     def __new__(mcls, __name: str, __bases: tuple[type, ...], __namespace: dict, **kwds) -> Self: ...  # PYI063
   |                       ^^^^^^ PYI063 (pep484-style-positional-only-parameter)
53 |
54 | class Metaclass2(type):
   |
   = help: Add `/` to function signature

PYI063.py:56:26: PYI063 (pep484-style-positional-only-parameter) Use PEP 570 syntax for positional-only parameters
   |
54 | class Metaclass2(type):
55 |     @classmethod
56 |     def __new__(metacls, __name: str, __bases: tuple[type, ...], __namespace: dict, **kwds) -> Self: ...  # PYI063
   |                          ^^^^^^ PYI063 (pep484-style-positional-only-parameter)
57 |
58 | class GoodMetaclass(type):
   |
   = help: Add `/` to function signature
